localization/v2.4.x/site/ja/integrations/integrations_overview.md
---
id: integrations_overview.md
summary: このページでは、Milvusやサードパーティツールを操作するためのチュートリアルのリストを提供します。
title: インテグレーション概要
---
<h1 id="Integrations-Overview" class="common-anchor-header">インテグレーション概要<button data-href="#Integrations-Overview" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><p>このページでは、Milvusとサードパーティツールを連携させるためのチュートリアルをご紹介します。</p>
<table>
<thead>
<tr><th>チュートリアル</th><th>使用例</th><th>パートナーまたはスタック</th></tr>
</thead>
<tbody>
<tr><td><a href="/docs/ja/v2.4.x/integrate_with_llamaindex.md">MilvusとLlamaIndexを使用したRAG</a></td><td>RAG</td><td>MilvusとLLamaIndexの組み合わせ</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/integrate_with_langchain.md">MilvusとLangChainとのRAG</a></td><td>RAG</td><td>Milvus, LangChain</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/milvus_hybrid_search_retriever.md">LangChainのMilvusハイブリッド検索レトリバー</a></td><td>ハイブリッド検索</td><td>MilvusとLangChainのハイブリッド検索</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/integrate_with_openai.md">MilvusとOpenAIによるセマンティック検索</a></td><td>セマンティック検索</td><td>Milvus、OpenAI</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/integrate_with_cohere.md">MilvusとCohereを使った質問応答</a></td><td>セマンティック検索</td><td>Milvus、Cohere</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/integrate_with_hugging-face.md">MilvusとHuggingFaceを使った質問応答</a></td><td>質問応答</td><td>Milvus, HuggingFace</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/integrate_with_pytorch.md">MilvusとPytorchを使った画像検索</a></td><td>意味検索</td><td>MilvusとPytorchを使った画像検索</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/integrate_with_sentencetransformers.md">MilvusとSentenceTransfromersを使った動画検索</a></td><td>意味検索</td><td>MilvusとSentenceTransformersを使った映画検索</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/basic_usage_langchain.md">LangChainでMilvusをベクトルストアとして使う</a></td><td>セマンティック検索</td><td>Milvus, LangChain</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/integrate_with_haystack.md">MilvusとHaystackを使ったRAG</a></td><td>RAG</td><td>Milvus、Haystack</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/integrate_with_voxel51.md">MilvusとFiftyOneによるビジョンサーチの実施</a></td><td>セマンティック検索</td><td>Milvus, FiftyOne</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/integrate_with_voyageai.md">MilvusとVoyageAIによるセマンティック検索</a></td><td>セマンティック検索</td><td>Milvus, VoyageAI</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/integrate_with_bentoml.md">MilvusとBentoMLによるRAG</a></td><td>RAG</td><td>Milvus、BentoML</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/integrate_with_dspy.md">RAGとMilvus、DSPy</a></td><td>RAG</td><td>Milvus、DSPy</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/integrate_with_jina.md">MilvusとJinaによるセマンティック検索</a></td><td>セマンティック検索</td><td>Milvus、Jina</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/integrate_with_snowpark.md">MilvusとSnowparkコンテナサービス</a></td><td>データ接続</td><td>Milvus、Snowpark</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/integrate_with_whyhow.md">MilvusとWhyHowによるルールベースの検索</a></td><td>質問応答</td><td>Milvus、WhyHow</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/integrate_with_langfuse.md">LangfuseにおけるMilvus</a></td><td>観測可能性</td><td>Milvus, Langfuse</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/integrate_with_ragas.md">MilvusとRAGによる評価</a></td><td>評価</td><td>Milvus、Ragas</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/integrate_with_memgpt.md">MilvusとMemGPTによるチャットボットエージェント</a></td><td>エージェント</td><td>Milvus、MemGPT</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/integrate_with_fastgpt.md">MilvusでFastGPTをデプロイする方法</a></td><td>ラグ</td><td>Milvus、FastGPT</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/integrate_with_vanna.md">VannaとMilvusでSQLを書く</a></td><td>RAG</td><td>Milvus、Vanna</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/integrate_with_camel.md">MilvusとCamelを使ったRAG</a></td><td>RAG</td><td>Milvus、Camel</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/integrate_with_airbyte.md">AirbyteとMilvus：オープンソースのデータ移動基盤</a></td><td>データ接続</td><td>Milvus、Airbyte</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/video_search_with_twelvelabs_and_milvus.md">高度なビデオ検索：Twelve LabsとMilvusを活用したセマンティック検索</a></td><td>セマンティック検索</td><td>Milvus、Twelve Labs</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/milvus_rag_with_vllm.md">Milvus、vLLM、Llama 3.1によるRAGの構築</a></td><td>RAG</td><td>Milvus、vLLM、LlamaIndex</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/llama_agents_metadata.md">Milvus, Milral AI, Llama-エージェントによるマルチエージェントシステム</a></td><td>エージェント</td><td>Milvus、Mistral AI、LlamaIndex</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/kafka-connect-milvus.md">KafkaとMilvusの接続</a></td><td>データソース</td><td>Milvus、Kafka</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/kotaemon_with_milvus.md">Kotaemon RAGとMilvusの連携</a></td><td>RAG</td><td>Milvus、Kotaemon</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/apify_milvus_rag.md">検索拡張生成：Apifyでウェブサイトをクロールし、Milvusにデータを保存して質問に答える。</a></td><td>データソース</td><td>Milvus、Apify</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/evaluation_with_deepeval.md">DeepEvalによる評価</a></td><td>評価と観測可能性</td><td>Milvus、DeepEval</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/evaluation_with_phoenix.md">Arize Pheonixによる評価</a></td><td>評価と観測可能性</td><td>Milvus、Arize Pheonix</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/dify_with_milvus.md">MilvusによるDifyの展開</a></td><td>オーケストレーション</td><td>Milvus、Dify</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/rag_with_langflow.md">MilvusとLangflowを使用したRAGシステムの構築</a></td><td>オーケストレーション</td><td>Milvus、Langflow</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/build_rag_on_arm.md">ArmアーキテクチャでRAGを構築する</a></td><td>RAG</td><td>Milvus、Arm</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/build_RAG_with_milvus_and_fireworks.md">MilvusとFireworks AIによるRAGの構築</a></td><td>LLM</td><td>Milvus、Fireworks AI</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/build_RAG_with_milvus_and_lepton.md">MilvusとLepton AIでRAGを構築する。</a></td><td>LLM</td><td>Milvus、Lepton AI</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/build_RAG_with_milvus_and_siliconflow">MilvusとSiliconFlowによるRAGの構築</a></td><td>LLM</td><td>Milvus、SiliconFlow</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/rag_with_milvus_and_unstructured.md">Milvusと非構造化データでRAGを構築する</a></td><td>データソース</td><td>Milvus、非構造化データソース</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/RAG_with_pii_and_milvus.md">Milvus + PII MaskerによるRAGの構築</a></td><td>データソース</td><td>Milvus、PIIマスカー</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/use_milvus_in_private_gpt.md">PrivateGPTでのMilvusの使用</a></td><td>オーケストレーション</td><td>ベクトル検索</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/quickstart_mem0_with_milvus.md">MilvusとMem0を使い始める</a></td><td>エージェント</td><td>Mem0とMilvus</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/knowledge_table_with_milvus.md">Milvusとナレッジテーブル</a></td><td>ナレッジエンジニアリング</td><td>ナレッジテーブル, Milvus</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/use_milvus_in_docsgpt.md">DocsGPTでMilvusを使う</a></td><td>オーケストレーション</td><td>DocsGPT、Milvus</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/use_milvus_with_sambanova.md">SambaNovaでMilvusを使う</a></td><td>オーケストレーション</td><td>Milvus、SambaNova</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/build_RAG_with_milvus_and_cognee.md">MilvusとCogneeによるRAG構築</a></td><td>ナレッジエンジニアリング</td><td>Milvus、Cognee</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/build_RAG_with_milvus_and_gemini.md">MilvusとGeminiによるRAGの構築</a></td><td>LLM</td><td>Milvus、Gemini</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/build_RAG_with_milvus_and_ollama.md">MilvusとOllamaによるRAGの構築</a></td><td>LLM</td><td>Milvus、Ollama</td></tr>
<tr><td><a href="/docs/ja/v2.4.x/milvus_rag_with_dynamiq.md">DynamiqとMilvusを使い始める</a></td><td>オーケストレーション</td><td>Milvus、Dynamiq</td></tr>
</tbody>
</table>
